force-app/main/default/objects/ERDC_Station__c/ERDC_Station__c.object-meta.xml
<CustomObject>
    <label>Station</label>
    <nameField>
        <label>Station Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>