force-app/main/default/objects/ERDC_Station__c/fields/ERDC_Line__c.field-meta.xml
<CustomField>
    <fullName>ERDC_Line__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>This field indicates the transport line.</description>
    <label>Line</label>
    <referenceTo>ERDC_Line__c</referenceTo>
    <relationshipName>LineStations</relationshipName>
    <type>Lookup</type>
</CustomField>