force-app/main/default/objects/ERDC_Station__c/fields/ERDC_Location__c.field-meta.xml
<CustomField>
    <fullName>ERDC_Location__c</fullName>
    <label>Location</label>
    <scale>15</scale>
    <type>Location</type>
</CustomField>