force-app/main/default/objects/ERDC_Station__c/fields/ERDC_Parent_Station__c.field-meta.xml
<CustomField>
    <fullName>ERDC_Parent_Station__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Station</label>
    <referenceTo>ERDC_Station__c</referenceTo>
    <relationshipName>Substations</relationshipName>
    <type>Lookup</type>
</CustomField>