force-app/main/default/objects/ERDC_Station__c/fields/ERDC_Trip_Count__c.field-meta.xml
<CustomField>
    <fullName>ERDC_Trip_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>ERDC_Trip_Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>