force-app/main/default/objects/ERDC_Station__c/recordTypes/ERDC_Main_Station.recordType-meta.xml
<RecordType>
    <fullName>ERDC_Main_Station</fullName>
    <active>true</active>
    <description>This is the record type for main stations.</description>
    <label>Main Station</label>
</RecordType>