force-app/main/default/objects/ERDC_Station__c/recordTypes/ERDC_Substation.recordType-meta.xml
<RecordType>
    <fullName>ERDC_Substation</fullName>
    <active>true</active>
    <description>This is the record type for subsidiary stations.</description>
    <label>Substation</label>
</RecordType>