force-app/main/default/objects/ERDC_Station__c/listViews/All_Stations.listView-meta.xml
<ListView>
    <fullName>All_Stations</fullName>
    <columns>NAME</columns>
    <columns>ERDC_Trip_Count__c</columns>
    <columns>ERDC_Line__c</columns>
    <columns>ERDC_Parent_Station__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All Stations</label>
</ListView>