force-app/main/default/objects/ERDC_Station__c/listViews/M1_101.listView-meta.xml
<ListView>
    <fullName>M1_101</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>ERDC_Location__Latitude__s</field>
        <operation>notEqual</operation>
        <value>0</value>
    </filters>
    <label>M1 -101</label>
</ListView>