force-app/main/default/objects/ERDC_Station__c/listViews/Substations.listView-meta.xml
<ListView>
    <fullName>Substations</fullName>
    <columns>NAME</columns>
    <columns>ERDC_Trip_Count__c</columns>
    <columns>ERDC_Parent_Station__c</columns>
    <columns>ERDC_Line__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>ERDC_Station__c.ERDC_Substation</value>
    </filters>
    <label>2.Substations</label>
</ListView>